[gd_scene load_steps=5 format=3 uid="uid://btysv8q6rp8ku"]

[ext_resource type="FontFile" uid="uid://gdh6qls28unk" path="res://HakgyoansimBareondotumR.ttf" id="1_sfaco"]
[ext_resource type="Script" path="res://panel_option/panel_option.gd" id="2_fkx3e"]

[sub_resource type="Theme" id="Theme_hvyh5"]
default_font = ExtResource("1_sfaco")
default_font_size = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7peo4"]
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)

[node name="PanelOption" type="PanelContainer"]
offset_right = 880.0
offset_bottom = 258.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource("Theme_hvyh5")
theme_override_styles/panel = SubResource("StyleBoxFlat_7peo4")
script = ExtResource("2_fkx3e")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="VersionLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "version 0.0.0"

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Edit URLs"

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2
columns = 2

[node name="ConfigLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="ButtonOK" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
focus_neighbor_left = NodePath("../ButtonCancel")
focus_neighbor_right = NodePath("../ButtonCancel")
focus_next = NodePath("../ButtonCancel")
focus_previous = NodePath("../ButtonCancel")
text = "Save and Close"

[node name="ButtonReset" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Reset to Default"

[node name="ButtonCancel" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
focus_neighbor_left = NodePath("../ButtonOK")
focus_neighbor_right = NodePath("../ButtonOK")
focus_next = NodePath("../ButtonOK")
focus_previous = NodePath("../ButtonOK")
text = "Cancel"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/ButtonOK" to="." method="_on_button_ok_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/ButtonReset" to="." method="_on_button_reset_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/ButtonCancel" to="." method="_on_button_cancel_pressed"]
